search component that shows empty results

--- a/public/home.component.html
+++ b/public/home.component.html
@@ -1,4 +1,3 @@
 <div id="home-component">
-  <h4>Create your Workout, search below:</h4>
-  <input #searchBox id="search-box" />
+  <workout-search></workout-search>
 </div>
